tests/snapshots/run_wpt_conformance__trtx_erf_float32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "erf.https.any.js",
    "erf float32 2D tensor",
    "trtx",
    "PASS",
)
